# net-route

./: Cargo.toml  README.md  build.rs  wrapper.h
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: add.rs  default.rs  delete.rs  list.rs  listen.rs
src/: lib.rs
src/platform_impl/: darwin.rs  linux.rs  macos.rs  mod.rs  route.c  windows.rs
src/platform_impl/macos/: bind.rs  macos.rs  mod.rs
