[package]
name = "net-route"
version = "0.1.5"
authors = ["Johnyburd <johnyburd8@gmail.com>"]

edition = "2021"
license = "MIT"
description = "This crate provides a cross-platform interface for manipulating the routing table"
homepage = "https://github.com/johnyburd/net-route"
repository = "https://github.com/johnyburd/net-route"
readme = "README.md"
keywords = ["route", "network", "ip"]

[package.metadata.docs.rs]

targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]


[dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
futures = "0.3.24"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.11.0"

[build-dependencies]
bindgen = "0.60.1"

