[package]
name = "net-route"
version = "0.2.7"
authors = ["Johnyburd <johnyburd8@gmail.com>"]

edition = "2021"
license = "MIT"
description = "This crate provides a cross-platform interface for manipulating the routing table"
homepage = "https://github.com/johnyburd/net-route"
repository = "https://github.com/johnyburd/net-route"
readme = "README.md"
keywords = ["route", "network", "ip"]

[package.metadata.docs.rs]

targets = [
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc"
]


[dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util", "sync"] }
futures = "0.3.24"
async-stream = "0.3.3"


[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.13.1"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "netioapi",
    "winerror",
    "ws2def",
    "ifdef"
] }

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }